- API Change: Vector2 angleRad(Vector2) now correctly return counter-clockwise angles.
- API Addition: Added Slider#setVisualPercent.
- API Change: Enabling fullscreen mode on the lwjgl3 backend now automatically sets the vsync setting again.
- API Addition: Added put(key, value, defaultValue) for maps with primitive keys, so the old value can be returned.
- API Addition: Added ObjectLongMap.
- Added Intersector#intersectRayOrientedBoundsFast to detect if a ray intersects an oriented bounding box, see https://github.com/libgdx/libgdx/pull/6139
- API Addition: Added Table#clip() and Container#clip() methods.
- API Addition: Added getBackgroundDrawable() to Button.
- API Addition: Added imageCheckedDown and getImageDrawable() to ImageButton and ImageTextButton.
- API Addition: Added focusedFontColor, checkedFocusedFontColor, and getFontColor() to TextButton and ImageTextButton.
- API Addition: Added wrapReverse setting to HorizontalGroup.
- API Addition: Added Slider style drawables for over and down: background, knobBefore, and knobAfter.
- Fixed LwjglFrame not hiding the canvas in some situations.
- API Change: Table#round uses ceil/floor and is applied during layout, rather than afterward.
- Fixed blurry NinePatch rendering when using a single center region.
- API Change: Upon changing the window size with the lwjgl3 backend, the window is centered on the monitor.

[1.9.11]
- Update to MobiVM 2.3.8
- Update to LWJGL 3.2.3
- Fixed AndroidInput crashes due to missing array resize (pressure array).
- API Change: Ray#set methods and Ray#mul(Matrix4) normalize direction vector. Use public field to set and avoid nor()
- API Change: New internal implementation of all Map and Set classes (except ArrayMap) to avoid OutOfMemoryErrors when too many keys collide. This also helps resistance against malicious users who can choose problematic names.