@@ -109,8 +109,8 @@ public class InputTest extends GdxTest implements InputProcessor {
 	}
 
 	@Override
-	public boolean scrolled (int amount) {
-		Gdx.app.log("Input Test", "scrolled: " + amount);
+	public boolean scrolled (float amountX, float amountY) {
+		Gdx.app.log("Input Test", "scrolled: " + amountY);
 		return false;
 	}
 
